[package]
name = "ruption_quantum_encrypt"
version = "0.1.1"
edition = "2021"
description = "A quantum-secure encryption crate with hybrid lattice/code-based cryptography and true randomness"
authors = ["Ruption AI <jeff@ruption.ai>"]
license = "MIT"
repository = "https://github.com/RuptionAI/ruption_quantum_encrypt"
keywords = ["cryptography", "quantum-secure", "rust", "entropy", "post-quantum"]
categories = ["cryptography"]

[dependencies]
getrandom = "0.2"    # For accessing OS-provided entropy
sha3 = "0.10"        # For SHA-3 hashing and key derivation